# Particle-Filter

./: .gitignore  CMakeLists.txt  README.md
data/: cascades.xml
doc/: anleitung.tex  bewegungsmodell.eps  kalman.eps  kalman.gv  particlefilter.tex  pfvis.eps
src/: adaboostDetect.cpp  adaboostDetect.h  colorFeatures.cpp  colorFeatures.h  constants.h  main.cpp  particleFilter.cpp  particleFilter.h  tracker.cpp  tracker.h
